--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,9 @@
 /* generics */
-
+#container {
+    width: 1300px;
+    margin: 0 auto;
+    background-position: center;
+}
 body{
     margin: 0 auto;
 }
@@ -7,21 +11,21 @@ body{
 /* logo */
 
 header{
-    height: 150px;
+    padding-top: 50px;
     background-image: url("../img/pattern.png");
     background-size: 30%;
     background-color: rgba(68, 136, 214, 0.5)
 }
 
 #logo{
-    width: 10%;
-    background-position: center;
+    height: 50px;
+    margin-left: 2px;
 }
 
 /* articolo */
 
 #intestazione {
-    padding-top: 25px;
+    padding-top: 20px;
 }
 
 #titolo{
@@ -72,8 +76,26 @@ th {
     background-color: #03a9f4;
 }
 
+.w-25{
+    width: 25%;
+    text-align: center;
+}
+
+#w-25{
+    width: 25%;
+    text-align: center;
+
+}
+
+#w-50{
+    width: 50%;
+    text-align: center;
+
+}
+
 .celeste {
     background-color: rgba(1, 195, 243, 0.192);
+  
 }
 
 /* pi+ di pagina */
@@ -84,16 +106,26 @@ h4 {
 
 #immagine1{
     background-image: url(../img/monitor.jpg);
-    background-size: 200px 200px;
+    
     background-repeat: no-repeat;
+    height: 200px;
+    width: 300px;
 }
 
 #immagine2{
+    margin-top: 10px;
     background-image: url(../img/graph.jpg);
-    background-size: 200px 200px;
     background-repeat: no-repeat;
+    height: 200px;
+    width: 300px;
+
 }
 
-strong {
+.titoloimmagine {
     color: white;
+    font-weight: bold;
+    padding-top: 10px;
+    padding-left: 10px;
+
+
 }
